testdata/corset/invalid/lookup_invalid_13.lisp
;;error:3:20-27:signed selector encountered
(defcolumns (P :u1) (X :u16) (Y :u16))
(defclookup l1 (X) (- 0 P) (Y))
